[package]
name = "lunarity-lexer"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>", "Andreas Bigger <abigger@nascent.xyz>"]
license = "GPL-3.0"
repository = "https://github.com/nascentxyz/lunarity"
description = "A high performance Solidity language Lexer"

[dependencies]
logos = { git = "https://github.com/nascentxyz/logos", branch = "fix_old_version" }
